--- a/source/core/build.gradle
+++ b/source/core/build.gradle
@@ -26,5 +26,6 @@ jacocoTestReport {
 javadoc {
     options {
         links 'https://javadoc.io/doc/com.badlogicgames.gdx/gdx/latest/com/badlogic/gdx/package-summary.html'
+        tags = ['require', 'requires', 'ensure', 'ensures']
     }
 }
